# news

./: .env.example  .gitignore  .traerules  AGENTS.md  COMPLETION_REPORT.md  Makefile  PROJECT_STATUS.md  PROXY_IMPLEMENTATION.md  README.md  TASK_COMPLETE.md  TRAE_SPEC.md  WEB_README.md  daemon.sh  deploy.sh  fetchers_registry.py  install.bat  install.sh  main.py  news_report.html  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  start.bat  start.sh  start_web.sh  test.bat  test_bloomberg.py  test_bloomberg_comprehensive.py  test_fetcher_proxy.py  test_fetchers.py  test_fixed_translator.py  test_language_categorization.py  test_proxy_config.py  test_proxy_fix.py  test_scheduler_sorting.py  test_translation.py  test_translation_system.py  test_translator.py  test_translator_proxy.py  (+1 more)
.trae/documents/: ai_news_skills_plan.md
data/json/: news_2026-04-14.json
docs/: AGENTS.md  PROXY_COMPLETE.md  PROXY_GUIDE.md  QUICKSTART.md  README.md
routes/: __init__.py  admin.py  api.py  filters.py  frontend.py
scripts/: dev.sh  run_skill.sh  start_web.sh  test.sh
skills/: news_analyzer_skill.py  news_fetcher_skill.py
skills/utils/: skill_helpers.py
src/display/: formatter.py  interactive.py  web_viewer.py
src/fetchers/: __init__.py  afp.py  aljazeera.py  ap_news.py  arstechnica.py  asahi.py  baidu.py  base.py  bbc.py  bloomberg.py  douyin.py  economist.py  eightworld.py  financialtimes.py  guardian.py  hackernews.py  initium.py  japantimes.py  kr36.py  mainichi.py  mittechreview.py  nhkworld.py  nytimes.py  registry.py  reuters.py  ruanyifeng.py  shinmin.py  sspai.py  techcrunch.py  toutiao.py  v2ex.py  weibo.py  wsj.py  zaobao.py
src/scheduler/: __init__.py  cron.py  jobs.py
src/storage/: database.py  json_storage.py  models.py
src/translators/: __init__.py  baidu.py  base.py  bing.py  deepl.py  free_translator.py  google.py  libre.py  microsoft.py  mymemory.py  openai.py
src/utils/: __init__.py  config.py  helpers.py  (+5 more)
templates/: detail.html  index.html  list.html
tests/: README.md  test_baidu_fetcher.py  test_douyin_fetcher.py  test_new_features.py  test_news_processor.py  test_proxy.py  test_toutiao_fetcher.py  test_translator.py  test_weibo_fetcher.py  test_wsj_fetcher.py  test_zhihu_daily_fetcher.py
(+41 files in other folders)
